added lavaplayer, rm runtime db