@@ -1,5 +1,14 @@
 package io.ignice.c17n;
 
+import com.sedmelluq.discord.lavaplayer.player.AudioLoadResultHandler;
+import com.sedmelluq.discord.lavaplayer.player.AudioPlayer;
+import com.sedmelluq.discord.lavaplayer.player.AudioPlayerManager;
+import com.sedmelluq.discord.lavaplayer.player.DefaultAudioPlayerManager;
+import com.sedmelluq.discord.lavaplayer.track.playback.NonAllocatingAudioFrameBuffer;
+import discord4j.voice.AudioProvider;
+import io.ignice.c17n.audio.LavaPlayerAudioProvider;
+import io.ignice.c17n.audio.LavaTrackScheduler;
+import io.ignice.c17n.util.SanityOps;
 import io.r2dbc.spi.ConnectionFactories;
 import io.r2dbc.spi.ConnectionFactory;
 import io.r2dbc.spi.ConnectionFactoryOptions;
@@ -23,10 +32,10 @@ import java.util.Collections;
 import java.util.List;
 
 @Configuration
-@EnableR2dbcRepositories
-@EnableTransactionManagement
+//@EnableR2dbcRepositories
+//@EnableTransactionManagement
 @PropertySource("classpath:application.properties")
-public class Config extends AbstractR2dbcConfiguration {
+public class Config /*extends AbstractR2dbcConfiguration*/ {
 
     @Value("${database.driver}")
     private String driver;
@@ -52,47 +61,74 @@ public class Config extends AbstractR2dbcConfiguration {
     @Value("${database.locale}")
     private String locale;
 
-    @Override
-    protected List<Object> getCustomConverters() {
-//        return List.of(new UserWriteConverter(), new UserReadConverter());
-        return Collections.emptyList();
+//    @Override
+//    protected List<Object> getCustomConverters() {
+////        return List.of(new UserWriteConverter(), new UserReadConverter());
+//        return Collections.emptyList();
+//    }
+//
+//    @Bean
+//    @Override
+//    public ConnectionFactory connectionFactory() {
+//        return ConnectionFactories.find(ConnectionFactoryOptions.builder()
+//                .option(ConnectionFactoryOptions.DRIVER, driver)
+////                .option(ConnectionFactoryOptions.PROTOCOL, protocol)
+//                .option(ConnectionFactoryOptions.HOST, host)
+//                .option(ConnectionFactoryOptions.PORT, port)
+//                .option(ConnectionFactoryOptions.DATABASE, database)
+//                .option(ConnectionFactoryOptions.USER, user)
+//                .option(ConnectionFactoryOptions.PASSWORD, password)
+//                .option(Option.valueOf("lock_timeout"), "10s")
+//                .option(Option.valueOf("statement_timeout"), "5m")
+//                .option(Option.valueOf("locale"), locale)
+//                .build());
+//    }
+//
+//    @Bean
+//    public ReactiveTransactionManager transactionManager(ConnectionFactory connectionFactory) {
+//        return new R2dbcTransactionManager(connectionFactory);
+//    }
+//
+//    @Bean
+//    public TransactionalOperator transactionalOperator(ReactiveTransactionManager transactionManager) {
+//        return TransactionalOperator.create(transactionManager);
+//    }
+
+    @Bean
+    public AudioPlayerManager audioPlayerManager() {
+        final DefaultAudioPlayerManager playerManager = new DefaultAudioPlayerManager();
+        playerManager
+                .getConfiguration()
+                .setFrameBufferFactory(NonAllocatingAudioFrameBuffer::new);
+        return playerManager;
     }
 
     @Bean
-    @Override
-    public ConnectionFactory connectionFactory() {
-        return ConnectionFactories.find(ConnectionFactoryOptions.builder()
-                .option(ConnectionFactoryOptions.DRIVER, driver)
-//                .option(ConnectionFactoryOptions.PROTOCOL, protocol)
-                .option(ConnectionFactoryOptions.HOST, host)
-                .option(ConnectionFactoryOptions.PORT, port)
-                .option(ConnectionFactoryOptions.DATABASE, database)
-                .option(ConnectionFactoryOptions.USER, user)
-                .option(ConnectionFactoryOptions.PASSWORD, password)
-                .option(Option.valueOf("lock_timeout"), "10s")
-                .option(Option.valueOf("statement_timeout"), "5m")
-                .option(Option.valueOf("locale"), locale)
-                .build());
+    public AudioPlayer audioPlayer(AudioPlayerManager audioPlayerManager) {
+        SanityOps.requireNonNull(audioPlayerManager, "audioPlayerManager");
+        return audioPlayerManager.createPlayer();
     }
 
     @Bean
-    public ReactiveTransactionManager transactionManager(ConnectionFactory connectionFactory) {
-        return new R2dbcTransactionManager(connectionFactory);
+    public AudioProvider audioProvider(AudioPlayer audioPlayer) {
+        SanityOps.requireNonNull(audioPlayer, "audioPlayer");
+        return new LavaPlayerAudioProvider(audioPlayer);
     }
 
     @Bean
-    public TransactionalOperator transactionalOperator(ReactiveTransactionManager transactionManager) {
-        return TransactionalOperator.create(transactionManager);
+    public AudioLoadResultHandler audioLoadResultHandler(AudioPlayer audioPlayer) {
+        SanityOps.requireNonNull(audioPlayer, "audioPlayer");
+        return new LavaTrackScheduler(audioPlayer);
     }
 
-    @Bean
-    public ConnectionFactoryInitializer initializer(ConnectionFactory connectionFactory) {
-        final ConnectionFactoryInitializer initializer = new ConnectionFactoryInitializer();
-        initializer.setConnectionFactory(connectionFactory);
-        final CompositeDatabasePopulator populator = new CompositeDatabasePopulator();
-        populator.addPopulators(new ResourceDatabasePopulator(new ClassPathResource("schema.sql")));
-        initializer.setDatabasePopulator(populator);
-        return initializer;
-    }
+//    @Bean
+//    public ConnectionFactoryInitializer initializer(ConnectionFactory connectionFactory) {
+//        final ConnectionFactoryInitializer initializer = new ConnectionFactoryInitializer();
+//        initializer.setConnectionFactory(connectionFactory);
+//        final CompositeDatabasePopulator populator = new CompositeDatabasePopulator();
+//        populator.addPopulators(new ResourceDatabasePopulator(new ClassPathResource("schema.sql")));
+//        initializer.setDatabasePopulator(populator);
+//        return initializer;
+//    }
 
 }
